--- a/style.css
+++ b/style.css
@@ -115,7 +115,9 @@ h1 {
   margin: 1rem;
 
 }
-
+.win-message{
+  font-size: 20px;
+}
 .restart-button {
   background-color: rgb(237, 234, 239);
   border-radius: 5px;
@@ -123,6 +125,6 @@ h1 {
   padding: 10px;
   margin-top: 10px;
   font-size: 15px;
-  display: none;
+  display: block;
 
 }
